# windows-ai-studio-templates

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.txt  QA.md  README.md  index.json  inference_models.json  optimized_models.json  samples-config.json  tutorials-config.json
.github/workflows/: publish-template.yml
aca-app/: azure.yaml
aca-app/infra/: main.bicep  main.parameters.json  web.bicep
aca-app/src/: Dockerfile  requirements.txt
aca-ui/: .gitignore
common/: README.md  finetuningConfig.mustache  finetuningParameters.mustache  inferenceConfig.mustache  inferenceParameters.mustache
configs/: README.md  projectSettings.json.mustache
configs/Phi-3-mini-4k-instruct/: README.md
configs/llama-v2-13b/: README.md
configs/llama-v2-7b/: README.md  defaultProjectSettings.json  templateInput.json
configs/llama-v3-8b/: README.md
configs/mistral-7b-v02/: README.md
datasets/: index.json
evaluation/: .env  .env.tpl  README.md  evaluate.py  evaluate.py.tpl  requirements.txt
finetuning_configs/: model_list.json
init/basic/: ai-app.yml
mcpServers/: config.json
model_lab_configs/: .gitignore  checks.json  huggingfaceLoginRequired.json  install_freeze.py  model_lab.workspace.config  model_list.json  model_template.md  parameter_template.json  sanitize.py  winml_cli_catalog.json
models/: README.md
samples/basic-workflow/: .env.example  .gitignore  README.md  basic_workflow.py  edge_conditions.py  pyproject.toml  requirements.txt  tool_workflow.py  workflow.py
samples/langgraph/: basic_langgraph.py  pyproject.toml
tutorials/: tutorials-config.json
(+922 files in other folders)
